client/my-sites/sidebar-unified/style.scss
// The following changes should be merged in their respective files before nav unification goes to production
@import url( '//s1.wp.com/wp-includes/css/dashicons.css?v=20150727' );

// Override Global Vars
.is-nav-unification {
	// client/assets/stylesheets/shared/_variables.scss
	--sidebar-width-max: 200px;
	--sidebar-width-min: 200px;

	--color-sidebar-background: #23282d;
	--color-sidebar-background-rgb: 35, 40, 45;
	--color-sidebar-menu-hover-background: #32373c;
	--color-sidebar-menu-hover-background-rgb: rgb( #32373c );
	--color-sidebar-menu-hover-heading-background: #1a1e23;
	--color-sidebar-menu-hover: #00b9eb;
	--color-sidebar-menu-hover-text: #00b9eb;
	--color-sidebar-menu-selected-background: #0073aa;
	--color-sidebar-border: #333333;
	--color-sidebar-text: #eee;
	--color-sidebar-text-alternative: #a2aab2;
	--color-sidebar-gridicon-fill: #a2aab2;

	.is-sidebar-collapsed & {
		--sidebar-width-max: 36px;
		--sidebar-width-min: 36px;
	}
}

// Local Vars
$sidebar-item-padding: 8px 0;
$font-size: rem( 14px );

.is-nav-unification {
	// client/layout/sidebar/style.scss
	.sidebar {
		background-color: var( --color-sidebar-background );
		padding-bottom: 12px;

		.sidebar__separator {
			margin: 0 0 11px;
		}

		.site__content {
			padding: 10px 0 10px 8px;
		}

		.site__home {
			left: 8px;
			top: 11px;
		}

		.sidebar__heading,
		.sidebar__menu-link {
			position: relative;
			font-size: $font-size;
			font-weight: 400;
			line-height: 1.3;
			padding: 0 0 0 8px;
			color: var( --color-sidebar-text );
			align-items: center;

			&:hover,
			&:focus {
				background-color: var( --color-sidebar-menu-hover-heading-background );
				color: var( --color-sidebar-menu-hover );
			}
		}

		.sidebar__expandable-title,
		.sidebar__menu-link-text {
			padding: $sidebar-item-padding;
			max-height: 34px;
			box-sizing: border-box;
		}

		.sidebar__expandable-arrow,
		.gridicons-external {
			display: none;
			width: 20px;
			height: 20px;
		}

		.sidebar__expandable-content {
			background: #32373c;
			padding: 7px 0 8px;

			.sidebar__menu-link {
				padding: 5px 12px;
				/* stylelint-disable-next-line scales/font-size */
				font-size: rem( 13px );
				line-height: 1.4;
				font-weight: 400;
				color: #b4b9be;

				&:hover,
				&:focus {
					background-color: transparent;
					color: var( --color-sidebar-menu-hover );
				}
			}

			.selected .sidebar__menu-link {
				background-color: transparent;
				color: white;
				font-weight: 600;
			}

			.sidebar__menu-link-text {
				padding: 0;
			}
		}

		.sidebar__menu-icon {
			color: var( --color-sidebar-gridicon-fill );
		}

		.sidebar__menu-item-parent {
			&.selected {
				.sidebar__menu-link {
					background: var( --color-sidebar-menu-selected-background );
					color: white;

					.sidebar__menu-icon {
						color: white;
					}
				}
			}
		}

		.sidebar__menu,
		.sidebar__menu-item-parent,
		.sidebar__menu-link {
			&:hover {
				.sidebar__menu-icon {
					color: var( --color-sidebar-menu-hover );
				}
			}
		}

		// Is togglable but closed
		.sidebar__menu.is-togglable {
			.sidebar__heading {
				padding: 0 0 0 8px;
				font-weight: 400;

				&::after {
					display: none;
					right: 0;
					border: solid 8px transparent;
					content: ' ';
					height: 0;
					width: 0;
					position: absolute;
					pointer-events: none;
					border-right-color: #f1f1f1;
					top: 50%;
					margin-top: -8px;
				}
			}
		}

		// Is toggled open
		.sidebar__menu.is-toggle-open {
			.sidebar__heading {
				background: var( --color-sidebar-menu-hover-heading-background );

				&:hover {
					.sidebar__menu-icon {
						color: var( --color-sidebar-menu-hover );
					}
				}

				&::after {
					display: block;
				}

				.sidebar__menu-icon {
					color: #fff;
				}
			}
			// Is toggled open and selected
			&.sidebar__menu--selected .sidebar__heading {
				background: var( --color-sidebar-menu-selected-background );
				color: white;

				.sidebar__menu-icon {
					color: #fff;
				}
			}
		}
	}

	//client/components/site-selector/style.scss
	.site-selector .site.is-highlighted {
		background-color: var ( --color-sidebar-menu-hover-background );
	}

	.site-selector .site.is-highlighted .site__domain,
	.site-selector .site.is-highlighted .site__title {
		color: var( --color-sidebar-text );
	}

	.site__badge {
		background: var( --color-sidebar-text );
	}

	// client/blocks/upsell-nudge/style.scss
	.upsell-nudge.banner.card.is-compact {
		background-color: #fff;
		color: #000;
	}

	.upsell-nudge.banner.card.is-compact .banner__info .banner__title {
		color: #000;
	}

	// client/my-sites/current-site/style.scss
	.current-site__switch-sites .button.is-borderless {
		color: var( --color-sidebar-text-alternative );
		padding: 6px 8px 6px 38px;
	}

	.current-site__switch-sites .button.is-borderless .gridicon {
		height: 20px;
		width: 20px;
		top: 9px;
		left: 9px;
	}

	.is-sidebar-collapsed & {
		.dashicons-admin-collapse::before {
			transform: rotate( 180deg );
		}

		// client/my-sites/current-site/style.scss
		.current-site__switch-sites .button.is-borderless {
			height: 34px;
		}

		.site-selector .search .search__open-icon {
			width: auto;
		}

		.current-site__switch-sites-label {
			display: none;
		}

		.current-site .site .site__info {
			display: none;
		}

		.site__content {
			padding: 10px 2px;
		}

		.site__home {
			left: 2px;
		}

		.site .site-icon {
			margin-bottom: 4px;
		}

		.current-site__notices > a::before {
			content: '\f534';
			font-family: 'dashicons';
			/* stylelint-disable-next-line scales/font-size */
			font-size: 20px;
			line-height: 20px;
			background-color: #a7aaad;
			color: white;
			border-radius: 50%;
			margin-left: 1px;
		}

		.upsell-nudge.banner.card.is-compact .banner__content {
			display: none;
		}

		.sidebar__heading,
		.sidebar__menu-link,
		.sidebar__menu.is-togglable .sidebar__heading {
			overflow: hidden;
		}

		// Is toggled open
		.sidebar__menu {
			// Is toggled open and selected
			&.sidebar__menu--selected .sidebar__heading {
				background: var( --color-sidebar-menu-selected-background );
				color: white;

				.sidebar__menu-icon {
					color: #fff;
				}

				&::after {
					display: block;
					border-width: 4px;
					margin-top: -4px;
				}
			}

			&.is-togglable:not( .is-toggle-open ):hover .sidebar__heading::after {
				border-width: 4px;
				margin-top: -4px;
			}
		}
	}

	.collapse-sidebar__toggle .sidebar__menu-link {
		cursor: pointer;

		&:hover,
		&:focus {
			background-color: transparent;
		}
	}
}

// Flyout menu (showing from >782px)
@media screen and ( min-width: 783px ) {
	.is-nav-unification {
		// client/layout/style.scss
		// layout/sidebar/style.scss
		// TODO: For prototype only, this prevents the sidebar from being scrollable.
		// In wp-admin there's custom JS to a) position the sidebar based on the scroll
		// position and b) position the flyout menu based on available screen space.
		&.focus-content,
		&.focus-sidebar {
			.sidebar,
			.layout__secondary {
				z-index: 1;
				overflow: initial;
			}
		}

		.sidebar__menu.is-togglable:not( .is-toggle-open ):hover {
			position: relative;

			.sidebar__heading {
				background-color: var( --color-sidebar-menu-hover-heading-background );
				color: var( --color-sidebar-menu-hover );
			}

			// indicator arrow
			.sidebar__heading::after {
				display: block;
				border-right-color: var( --color-sidebar-menu-hover-background );
			}

			// flyout content
			.sidebar__expandable-content {
				display: block;
				position: absolute;
				top: 0;
				left: var( --sidebar-width-max );
				width: 160px;

				.sidebar__menu-link:hover {
					font-weight: normal;
				}
			}
		}
	}
}

@media screen and ( max-width: 782px ) {
	// client/layout/sidebar/style.scss
	.is-nav-unification {
		&.focus-content .layout__content {
			padding: 71px 24px 24px;
		}

		.sidebar {
			// client/my-sites/current-site/style.scss
			.site__content {
				padding: 18px 0 18px 12px;
			}

			.current-site__switch-sites .button.is-borderless {
				padding: 11px 8px 11px 38px;
			}

			.current-site__switch-sites .button.is-borderless .gridicon {
				top: 14px;
			}

			.sidebar__separator {
				margin: 0 0 11px;
			}

			.sidebar__heading,
			.sidebar__menu-link {
				padding: 0 0 0 12px;
				font-size: 1rem;
			}

			.sidebar__menu.is-togglable {
				.sidebar__heading {
					padding: 0 0 0 12px;
					font-size: 1rem;
				}
			}

			.sidebar__menu-icon {
				margin-right: 10px;
			}

			.sidebar__expandable-title,
			.sidebar__menu-link-text {
				padding: 13px 0;
				max-height: inherit;
			}

			.sidebar__expandable-content {
				.sidebar__menu-link {
					font-size: 1rem;
					padding: 7px 16px 7px 42px;
				}
			}

			.sidebar__menu.is-toggle-open .sidebar__heading::after {
				display: none;
			}

			.collapse-sidebar__toggle {
				display: none;
			}
		}
	}
}

